MODORDERS-1254. Change logic of retrieving current fiscal year